--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,9 @@
   volume={12033},
   pages={948--958},
   year={2022},
-  organization={SPIE}
+  organization={SPIE},
+  pdf={https://arxiv.org/abs/2202.13553},
+  preview = {Towards-a-device-independent-deep-learning.png},
 }
 
 @article{narayan2021oc11,
@@ -15,7 +17,8 @@
   author={Narayan, A and Kaushik, S and Shankar, H and Jain, S and Hegde, N and Vyas, P and Atada, J and Manjushree, SP and Thang, J and Saw, S and others},
   journal={Ultrasound in Obstetrics \& Gynecology},
   volume={58},
-  year={2021}
+  year={2021},
+  pdf={https://obgyn.onlinelibrary.wiley.com/doi/full/10.1002/uog.23853}
 }
 
 @inproceedings{shankar2022leveraging,
@@ -24,7 +27,9 @@
   booktitle={2022 IEEE 19th International Symposium on Biomedical Imaging (ISBI)},
   pages={1--5},
   year={2022},
-  organization={IEEE}
+  organization={IEEE},
+  pdf={https://arxiv.org/abs/2203.14482},
+  preview = {Leveraging-clinically-relevant.png},
 }
 
 @article{shankar2021vp18,
@@ -32,5 +37,6 @@
   author={Shankar, H and Narayan, A and Kaushik, S and Jain, S and Hegde, N and Vyas, P and Atada, J and Manjushree, SP and Thang, J and Saw, S and others},
   journal={Ultrasound in Obstetrics \& Gynecology},
   volume={58},
-  year={2021}
+  year={2021},
+  pdf={https://obgyn.onlinelibrary.wiley.com/doi/full/10.1002/uog.24298}
 }
