--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,17 @@
 ---
 ---
+@inproceedings{narayan2026breaking,
+  title={Breaking Depth Estimation Models with Semantic Adversarial Attacks},
+  author={Narayan, Adithya and Ojha, Ujjwal and Theiss, Jonas and Prakash, Aditya and De la Torre, Fernando},
+  booktitle={IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) 2026},
+  year={2026},
+  note={Under Review},
+  pdf={https://arxiv.org/abs/placeholder}, 
+  selected={true},
+  abstract={We introduce a systematic toolbox for diagnosing monocular depth estimation models by discovering failure cases arising from camera viewpoint changes. Our method employs a differentiable rendering pipeline to adversarially optimize camera extrinsics, sampling semantically meaningful but challenging viewpoints. We construct a dataset of complex 3D indoor scenes and evaluate four state-of-the-art depth estimation models, showing that our framework exposes consistent weaknesses and establishes a new benchmark for robustness analysis.}
+}
+
+
 @inproceedings{lad2022towards,
   title={Towards a device-independent deep learning approach for the automated segmentation of sonographic fetal brain structures: a multi-center and multi-device validation},
   author={Lad, Abhi and Narayan, Adithya and Shankar, Hari and Jain, Shefali and Vyas, Pooja Punjani and Singh, Divya and Hegde, Nivedita and Atada, Jagruthi and Thang, Jens and Nee, Saw Shier and others},
