--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,12 +1,12 @@
 ---
 ---
 @inproceedings{narayan2026breaking,
-  title={Breaking Depth Estimation Models with Semantic Adversarial Attacks},
-  author={Narayan, Adithya and Ojha, Ujjwal and Theiss, Jonas and Prakash, Aditya and De la Torre, Fernando},
+  title={3D Adversarial Scene exploration},
+  author={},
   booktitle={IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) 2026},
   year={2026},
   note={Under Review},
-  pdf={https://arxiv.org/abs/placeholder}, 
+  pdf={placeholder}, 
   selected={true},
   abstract={We introduce a systematic toolbox for diagnosing monocular depth estimation models by discovering failure cases arising from camera viewpoint changes. Our method employs a differentiable rendering pipeline to adversarially optimize camera extrinsics, sampling semantically meaningful but challenging viewpoints. We construct a dataset of complex 3D indoor scenes and evaluate four state-of-the-art depth estimation models, showing that our framework exposes consistent weaknesses and establishes a new benchmark for robustness analysis.}
 }
